--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-f@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&display=swap');
 
 :root{
