--- a/style.css
+++ b/style.css
@@ -733,7 +733,7 @@ footer{
 
 @media only screen and (max-width: 1100px) {
     .hero-careers {
-        height: 40vh;
+        height: 60vh;
     }
 }
 
@@ -1351,7 +1351,7 @@ a{
 
 @media only screen and (max-width: 1100px) {
     .hero-benefits {
-        height: 40vh;
+        height: 60vh;
     }
 }
 
@@ -1420,9 +1420,7 @@ a{
     font-family: var(--accent-font);
     font-style: normal;
     font-weight: 400;
-    font-size: 1.15vw;
     color: rgb(0, 0, 0);
-   /*animation: left-to-right 1s ease-in-out;*/
 }
 
 @media only screen and (min-width: 750px ) and (max-width: 850) {
@@ -1432,9 +1430,9 @@ a{
     }
 }
 
-@media only screen and (max-width: 510px) {
-    .b-text {
-        font-size: 2.25vw;
+@media only screen and (max-width: 1100px) {
+    .b-text p, .b-text h1{
+        font-size: 3vw;
     }
 
     .benefit-1-img,
